Developer/src/objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>基本情報</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PictureID__c</fullName>
        <label>画像ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PictureURL__c</fullName>
        <formula>IF ( PictureID__c=NULL , NULL , &quot;/servlet/servlet.FileDownload?file=&quot; &amp; PictureID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像URL</label>
        <type>Text</type>
    </fields>
    <label>ブランド</label>
    <nameField>
        <label>ブランド名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>